--- a/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/navigation/NavigationTabItem.html
+++ b/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/navigation/NavigationTabItem.html
@@ -3,7 +3,7 @@
 <body>
 
 <wicket:panel>
-    <a wicket:id="link">[link]</a>
+    <a wicket:id="link" role="tab"><em wicket:id="label"></em> <span class="fa-chevron-right"></span></a>
 </wicket:panel>
 
 </body>
