Use timeline template for post list.

--- a/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/BlogPostsPage.html
+++ b/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/BlogPostsPage.html
@@ -4,19 +4,8 @@
 
 <wicket:extend>
 
-    <span wicket:id="pageable-wrapper">
-        <ul wicket:id="pageable">
-            <div class="item">
-                <li>
-                    <div class="row">
-                        <div class="col-sm-9"><a wicket:id="postLink" target="_blank"></a></div>
-                        <div class="col-sm-3"><span class="pull-right" wicket:id="publishedDate"></span></div>
-                    </div>
-                </li>
-            </div>
-        </ul>
-        <div wicket:id="infinite-pager"></div>
-    </span>
+    <h2>Autorem postów jest <em wicket:id="author">[author]</em></h2>
+    <div wicket:id="timeline"></div>
 
 </wicket:extend>
 
