--- a/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/AbstractBlogsPage.html
+++ b/src/main/java/com/jvm_bloggers/frontend/public_area/blogs/AbstractBlogsPage.html
@@ -16,7 +16,7 @@
     <span wicket:id="pageable-wrapper">
         <ul wicket:id="pageable">
             <div class="item">
-                <li><a wicket:id="url" target="_blank"><i class="fa fa-external-link"></i></a> <a wicket:id="blogPostsLinkId">[blog posts]</a> by <a wicket:id="authorLink" target="_blank">[authorLink]</a><span wicket:id="author">[author]</span> (<span wicket:id="countFirstRange">[12]</span>/<span wicket:id="countSecondRange">[12]</span>)</li>
+                <li><a wicket:id="blogPostsLinkId" target="_blank"><i class="fa fa-list"></i></a> <a wicket:id="url">[blog link]</a> by <a wicket:id="authorLink" target="_blank">[authorLink]</a><span wicket:id="author">[author]</span> (<span wicket:id="countFirstRange">[12]</span>/<span wicket:id="countSecondRange">[12]</span>)</li>
             </div>
         </ul>
         <div wicket:id="infinite-pager"></div>
